<resources>
    <string name="app_name">Court Counter</string>
    <string name="action_settings">Settings</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score_0">0</string>
    <string name="free_throw">Free Throw</string>
    <string name="add_2_points">+2 Points</string>
    <string name="add_3_points">+3 Points</string>

</resources>
